--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.54.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
